--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,10 @@ body {
 p{
     font-size: 18px;
     font-weight: 400;
-    margin: 20px 0;
+    margin: 20px 15px;
     padding: 0 10px;
+}
+.hero{
+   padding: 50px 20px;
+   margin: 0; 
 }
