--- a/styles.css
+++ b/styles.css
@@ -19,3 +19,10 @@ p{
    padding: 50px 20px;
    margin: 0; 
 }
+.card{
+    margin: 20px auto;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    width: 80%;
+    height: auto;
+}
