added contact details

--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
 }
 body {
     font-family: var(--font-inter);
+    background-color: #f8f9fa;
 }
 .container-fluid.p-0 {
     padding: 0 !important;
@@ -15,6 +16,11 @@ p{
     margin: 20px 15px;
     padding: 0 10px;
 }
+h2{
+    display: block;
+    margin: auto 0;
+    
+}
 .hero{
    padding: 50px 20px;
    margin: 0; 
@@ -25,4 +31,24 @@ p{
     transition: 0.3s;
     width: 80%;
     height: auto;
+}
+.skills{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 30px;
+    padding: 20px;
+
+}
+.container{
+    border: 2px solid #cfd8dc;
+    border-radius: 10px;
+    padding: 20px;
+    max-width: 400px;
+}
+.contact{
+    padding: 30px 20px;
+    margin: 40px 20px;
+    text-align: center;
+
 }
