--- a/styles.css
+++ b/styles.css
@@ -58,8 +58,12 @@ h2{
     align-items: center;
     text-align: center;
     background-color: var(--background);
-
-
+}
+.projects-container{
+    margin: auto;
+    align-items: center;
+    text-align: center;
+    background-color: var(--background);
 }
 .about-image{
     margin-top: 20px;
@@ -70,4 +74,9 @@ h2{
     display: flex;
     justify-content: center;
     align-items: center;
+}
+em{
+    font-style: italic;
+    font-weight: 600;
+    color: #333;
 }
