added the footer

--- a/styles.css
+++ b/styles.css
@@ -80,3 +80,8 @@ em{
     font-weight: 600;
     color: #333;
 }
+.contact-details{
+    margin-top: 20px;
+    font-size: 18px;
+    padding:0 1.2rem;
+}
